View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0032285 | Open CASCADE | OCCT:Coding | public | 2021-04-06 15:15 | 2021-04-17 14:02 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.5.0 | ||||
Target Version | 7.6.0 | Fixed in Version | 7.6.0 | ||
Summary | 0032285: Coding Rules - get rid of generic methods in GCPnts_TangentialDeflection | ||||
Description | GCPnts_TangentialDeflection is implemented using generic methods in GCPnts_TangentialDeflection.pxx. It is proposed replacing generic methods via C++ templates. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
|
Branch CR32285 has been created by kgv. SHA-1: f219f451d4d1172d5e317802716c442d17995d70 Detailed log of new commits: Author: kgv Date: Tue Apr 6 15:16:22 2021 +0300 0032285: Coding Rules - get rid of generic methods in GCPnts_TangentialDeflection |
|
Branch CR32285 has been updated forcibly by kgv. SHA-1: e65ae05b8c4e727261351586bbb8eada1e24bf3c |
|
Patch is ready for review - OCCT: branch CR32285. http://jenkins-test-12.nnov.opencascade.com:8080/view/CR32285-master-KGV/ |
|
Break long lines in GCPnts_TangentialDeflection.hxx. + //! On respecte ll'angle et la fleche, on peut imposer un nombre minimum de points sur un element lineaire. Use english: Respecting the angle and the deflection, we impose a minimum number of points on a curve. |
|
Branch CR32285 has been updated by kgv. SHA-1: bf9e9ce18beee4e333958d078fbaadab055da18f Detailed log of new commits: Author: kgv Date: Wed Apr 7 12:15:46 2021 +0300 # remarks (cosmetics) |
|
Branch CR32285_1 has been created by kgv. SHA-1: fda54c0ca2c17f15a9d30c2c334fcc2e6ad4077d Detailed log of new commits: Author: kgv Date: Tue Apr 6 15:16:22 2021 +0300 0032285: Coding Rules - get rid of generic methods in GCPnts_TangentialDeflection |
|
Remarks have been pushed. |
|
For integration: occt - CR32285_1 products - none |
|
Combination - OCCT branch : IR-2021-04-09 master SHA - a2af24d1a9e5a4f35749261e95d04ae2f389ccbb a87b7ddc8cb44606b91e3f37113847c3f5f50fdc Products branch : IR-2021-04-09 SHA - b5e0ee5a2dc026e18acf3da707091be5d9d6d746 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 18019.250000000382 / 18057.390000000454 [-0.21%] Products Total CPU difference: 11542.82000000007 / 11506.800000000105 [+0.31%] Windows-64-VC14: OCCT Total CPU difference: 19509.84375 / 19513.828125 [-0.02%] Products Total CPU difference: 12890.46875 / 12943.234375 [-0.41%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR32285_1 has been deleted by inv. SHA-1: fda54c0ca2c17f15a9d30c2c334fcc2e6ad4077d |
|
Branch CR32285 has been deleted by inv. SHA-1: bf9e9ce18beee4e333958d078fbaadab055da18f |
occt: master c6aa2a83 2021-04-06 12:16:22 Committer: bugmaster Details Diff |
0032285: Coding Rules - get rid of generic methods in GCPnts_TangentialDeflection |
Affected Issues 0032285 |
|
mod - src/GCPnts/FILES | Diff File | ||
mod - src/GCPnts/GCPnts_TangentialDeflection.cxx | Diff File | ||
mod - src/GCPnts/GCPnts_TangentialDeflection.hxx | Diff File | ||
rm - src/GCPnts/GCPnts_TangentialDeflection.pxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2021-04-06 15:15 | kgv | New Issue | |
2021-04-06 15:15 | kgv | Assigned To | => kgv |
2021-04-06 15:37 | git | Note Added: 0100133 | |
2021-04-06 16:05 | git | Note Added: 0100135 | |
2021-04-06 17:23 | kgv | Note Added: 0100136 | |
2021-04-06 17:23 | kgv | Assigned To | kgv => msv |
2021-04-06 17:23 | kgv | Status | new => assigned |
2021-04-06 17:24 | kgv | Status | assigned => resolved |
2021-04-06 17:24 | kgv | Severity | minor => integration request |
2021-04-07 12:03 | msv | Note Added: 0100163 | |
2021-04-07 12:03 | msv | Assigned To | msv => kgv |
2021-04-07 12:03 | msv | Status | resolved => assigned |
2021-04-07 12:03 | msv | Note Edited: 0100163 | |
2021-04-07 12:15 | git | Note Added: 0100164 | |
2021-04-07 12:16 | git | Note Added: 0100165 | |
2021-04-07 12:16 | kgv | Note Added: 0100166 | |
2021-04-07 12:16 | kgv | Assigned To | kgv => msv |
2021-04-07 12:16 | kgv | Status | assigned => resolved |
2021-04-07 16:39 | msv | Note Added: 0100173 | |
2021-04-07 16:39 | msv | Assigned To | msv => bugmaster |
2021-04-07 16:39 | msv | Status | resolved => reviewed |
2021-04-10 11:06 | kgv | Relationship added | related to 0032293 |
2021-04-10 13:03 | bugmaster | Note Added: 0100225 | |
2021-04-10 13:03 | bugmaster | Status | reviewed => tested |
2021-04-10 13:08 | bugmaster | Test case number | => Not required |
2021-04-10 13:16 | bugmaster | Changeset attached | => occt master c6aa2a83 |
2021-04-10 13:16 | bugmaster | Status | tested => verified |
2021-04-10 13:16 | bugmaster | Resolution | open => fixed |
2021-04-17 14:02 | git | Note Added: 0100415 | |
2021-04-17 14:02 | git | Note Added: 0100416 |