0032285: Coding Rules - get rid of generic methods in GCPnts_TangentialDeflection