src/GCPnts/GCPnts_TangentialDeflection.hxx
@@ -26,16 +26,13 @@
 #include <Adaptor3d_Curve.hxx>
 #include <Adaptor2d_Curve2d.hxx>
 
-class Standard_ConstructionError;
-class Standard_OutOfRange;
-
 //! Computes a set of  points on a curve from package
 //! Adaptor3d  such  as between  two successive   points
 //! P1(u1)and P2(u2) :
-//!
+//! @code
 //! . ||P1P3^P3P2||/||P1P3||*||P3P2||<AngularDeflection
 //! . ||P1P2^P1P3||/||P1P2||<CurvatureDeflection
-//!
+//! @endcode
 //! where P3 is the point of abscissa ((u1+u2)/2), with
 //! u1 the abscissa of the point P1 and u2 the abscissa
 //! of the point P2.
@@ -47,107 +44,220 @@ class Standard_OutOfRange;
 //! and CurvatureDeflection > gp::Resolution() must be
 //! satisfied at the construction time.
 //!
-//! A  minimum  number of points  can  be fixed   for a
-//! linear or circular element.
+//! A minimum number of points can be fixed for a linear or circular element.
 //! Example:
-//! Handle(Geom_BezierCurve) C = new Geom_BezierCurve (Poles);
-//! GeomAdaptor_Curve Curve (C);
-//! Real CDeflect = 0.01;  //Curvature deflection
-//! Real ADeflect = 0.09; //Angular deflection
+//! @code
+//! Handle(Geom_BezierCurve) aCurve = new Geom_BezierCurve (thePoles);
+//! GeomAdaptor_Curve aCurveAdaptor (aCurve);
+//! double aCDeflect  = 0.01; // Curvature deflection
+//! double anADeflect = 0.09; // Angular   deflection
 //!
-//! GCPnts_TangentialDeflection PointsOnCurve;
-//! PointsOnCurve.Initialize (Curve, ADeflect, CDeflect);
-//!
-//! Real U;
-//! gp_Pnt P;
-//! for (Integer i=1; i<=PointsOnCurve.NbPoints();i++) {
-//! U = PointsOnCurve.Parameter (i);
-//! P = PointsOnCurve.Value (i);
+//! GCPnts_TangentialDeflection aPointsOnCurve;
+//! aPointsOnCurve.Initialize (aCurveAdaptor, anADeflect, aCDeflect);
+//! for (int i = 1; i <= aPointsOnCurve.NbPoints(); ++i)
+//! {
+//!   double aU   = aPointsOnCurve.Parameter (i);
+//!   gp_Pnt aPnt = aPointsOnCurve.Value (i);
 //! }
-
+//! @endcode
 class GCPnts_TangentialDeflection 
 {
 public:
 
-//
   DEFINE_STANDARD_ALLOC
 
-  
+  //! Empty constructor.
+  //! @sa Initialize()
   Standard_EXPORT GCPnts_TangentialDeflection();
-  
-  Standard_EXPORT GCPnts_TangentialDeflection(const Adaptor3d_Curve& C, const Standard_Real AngularDeflection, const Standard_Real CurvatureDeflection, const Standard_Integer MinimumOfPoints = 2, const Standard_Real UTol = 1.0e-9, const Standard_Real theMinLen = 1.0e-7);
-  
-  Standard_EXPORT GCPnts_TangentialDeflection(const Adaptor3d_Curve& C, const Standard_Real FirstParameter, const Standard_Real LastParameter, const Standard_Real AngularDeflection, const Standard_Real CurvatureDeflection, const Standard_Integer MinimumOfPoints = 2, const Standard_Real UTol = 1.0e-9, const Standard_Real theMinLen = 1.0e-7);
-  
-  Standard_EXPORT GCPnts_TangentialDeflection(const Adaptor2d_Curve2d& C, const Standard_Real AngularDeflection, const Standard_Real CurvatureDeflection, const Standard_Integer MinimumOfPoints = 2, const Standard_Real UTol = 1.0e-9, const Standard_Real theMinLen = 1.0e-7);
-  
-  Standard_EXPORT GCPnts_TangentialDeflection(const Adaptor2d_Curve2d& C, const Standard_Real FirstParameter, const Standard_Real LastParameter, const Standard_Real AngularDeflection, const Standard_Real CurvatureDeflection, const Standard_Integer MinimumOfPoints = 2, const Standard_Real UTol = 1.0e-9, const Standard_Real theMinLen = 1.0e-7);
-  
-  Standard_EXPORT void Initialize (const Adaptor3d_Curve& C, const Standard_Real AngularDeflection, const Standard_Real CurvatureDeflection, const Standard_Integer MinimumOfPoints = 2, const Standard_Real UTol = 1.0e-9, const Standard_Real theMinLen = 1.0e-7);
-  
-  Standard_EXPORT void Initialize (const Adaptor3d_Curve& C, const Standard_Real FirstParameter, const Standard_Real LastParameter, const Standard_Real AngularDeflection, const Standard_Real CurvatureDeflection, const Standard_Integer MinimumOfPoints = 2, const Standard_Real UTol = 1.0e-9, const Standard_Real theMinLen = 1.0e-7);
-  
-  Standard_EXPORT void Initialize (const Adaptor2d_Curve2d& C, const Standard_Real AngularDeflection, const Standard_Real CurvatureDeflection, const Standard_Integer MinimumOfPoints = 2, const Standard_Real UTol = 1.0e-9, const Standard_Real theMinLen = 1.0e-7);
-  
-  Standard_EXPORT void Initialize (const Adaptor2d_Curve2d& C, const Standard_Real FirstParameter, const Standard_Real LastParameter, const Standard_Real AngularDeflection, const Standard_Real CurvatureDeflection, const Standard_Integer MinimumOfPoints = 2, const Standard_Real UTol = 1.0e-9, const Standard_Real theMinLen = 1.0e-7);
-  
+
+  //! Constructor for 3D curve.
+  //! @param theC [in] 3d curve
+  //! @param theAngularDeflection   [in] angular deflection in radians
+  //! @param theCurvatureDeflection [in] linear deflection
+  //! @param theMinimumOfPoints [in] minimum number of points
+  //! @param theUTol   [in] tolerance in curve parametric scope
+  //! @param theMinLen [in] minimal length
+  Standard_EXPORT GCPnts_TangentialDeflection (const Adaptor3d_Curve& theC,
+                                               const Standard_Real theAngularDeflection, const Standard_Real theCurvatureDeflection,
+                                               const Standard_Integer theMinimumOfPoints = 2,
+                                               const Standard_Real theUTol = 1.0e-9,
+                                               const Standard_Real theMinLen = 1.0e-7);
+
+  //! Constructor for 3D curve with restricted range.
+  //! @param theC [in] 3d curve
+  //! @param theFirstParameter [in] first parameter on curve
+  //! @param theLastParameter  [in] last  parameter on curve
+  //! @param theAngularDeflection   [in] angular deflection in radians
+  //! @param theCurvatureDeflection [in] linear deflection
+  //! @param theMinimumOfPoints [in] minimum number of points
+  //! @param theUTo  l [in] tolerance in curve parametric scope
+  //! @param theMinLen [in] minimal length
+  Standard_EXPORT GCPnts_TangentialDeflection (const Adaptor3d_Curve& theC,
+                                               const Standard_Real theFirstParameter, const Standard_Real theLastParameter,
+                                               const Standard_Real theAngularDeflection, const Standard_Real theCurvatureDeflection,
+                                               const Standard_Integer theMinimumOfPoints = 2,
+                                               const Standard_Real theUTol = 1.0e-9,
+                                               const Standard_Real theMinLen = 1.0e-7);
+
+  //! Constructor for 2D curve.
+  //! @param theC [in] 2d curve
+  //! @param theAngularDeflection   [in] angular deflection in radians
+  //! @param theCurvatureDeflection [in] linear deflection
+  //! @param theMinimumOfPoints [in] minimum number of points
+  //! @param theUTol   [in] tolerance in curve parametric scope
+  //! @param theMinLen [in] minimal length
+  Standard_EXPORT GCPnts_TangentialDeflection (const Adaptor2d_Curve2d& theC,
+                                               const Standard_Real theAngularDeflection, const Standard_Real theCurvatureDeflection,
+                                               const Standard_Integer theMinimumOfPoints = 2,
+                                               const Standard_Real theUTol = 1.0e-9,
+                                               const Standard_Real theMinLen = 1.0e-7);
+
+  //! Constructor for 2D curve with restricted range.
+  //! @param theC [in] 2d curve
+  //! @param theFirstParameter [in] first parameter on curve
+  //! @param theLastParameter  [in] last  parameter on curve
+  //! @param theAngularDeflection   [in] angular deflection in radians
+  //! @param theCurvatureDeflection [in] linear deflection
+  //! @param theMinimumOfPoints [in] minimum number of points
+  //! @param theUTol   [in] tolerance in curve parametric scope
+  //! @param theMinLen [in] minimal length
+  Standard_EXPORT GCPnts_TangentialDeflection (const Adaptor2d_Curve2d& theC,
+                                               const Standard_Real theFirstParameter, const Standard_Real theLastParameter,
+                                               const Standard_Real theAngularDeflection, const Standard_Real theCurvatureDeflection,
+                                               const Standard_Integer theMinimumOfPoints = 2,
+                                               const Standard_Real theUTol = 1.0e-9,
+                                               const Standard_Real theMinLen = 1.0e-7);
+
+  //! Initialize algorithm for 3D curve.
+  //! @param theC [in] 3d curve
+  //! @param theAngularDeflection   [in] angular deflection in radians
+  //! @param theCurvatureDeflection [in] linear deflection
+  //! @param theMinimumOfPoints [in] minimum number of points
+  //! @param theUTol   [in] tolerance in curve parametric scope
+  //! @param theMinLen [in] minimal length
+  Standard_EXPORT void Initialize (const Adaptor3d_Curve& theC,
+                                   const Standard_Real theAngularDeflection, const Standard_Real theCurvatureDeflection,
+                                   const Standard_Integer theMinimumOfPoints = 2,
+                                   const Standard_Real theUTol = 1.0e-9,
+                                   const Standard_Real theMinLen = 1.0e-7);
+
+  //! Initialize algorithm for 3D curve with restricted range.
+  //! @param theC [in] 3d curve
+  //! @param theFirstParameter [in] first parameter on curve
+  //! @param theLastParameter  [in] last  parameter on curve
+  //! @param theAngularDeflection   [in] angular deflection in radians
+  //! @param theCurvatureDeflection [in] linear deflection
+  //! @param theMinimumOfPoints [in] minimum number of points
+  //! @param theUTol   [in] tolerance in curve parametric scope
+  //! @param theMinLen [in] minimal length
+  Standard_EXPORT void Initialize (const Adaptor3d_Curve& theC,
+                                   const Standard_Real theFirstParameter, const Standard_Real theLastParameter,
+                                   const Standard_Real theAngularDeflection, const Standard_Real theCurvatureDeflection,
+                                   const Standard_Integer theMinimumOfPoints = 2,
+                                   const Standard_Real theUTol = 1.0e-9,
+                                   const Standard_Real theMinLen = 1.0e-7);
+
+  //! Initialize algorithm for 2D curve.
+  //! @param theC [in] 2d curve
+  //! @param theAngularDeflection   [in] angular deflection in radians
+  //! @param theCurvatureDeflection [in] linear deflection
+  //! @param theMinimumOfPoints [in] minimum number of points
+  //! @param theUTol   [in] tolerance in curve parametric scope
+  //! @param theMinLen [in] minimal length
+  Standard_EXPORT void Initialize (const Adaptor2d_Curve2d& theC,
+                                   const Standard_Real theAngularDeflection, const Standard_Real theCurvatureDeflection,
+                                   const Standard_Integer theMinimumOfPoints = 2,
+                                   const Standard_Real theUTol = 1.0e-9,
+                                   const Standard_Real theMinLen = 1.0e-7);
+
+  //! Initialize algorithm for 2D curve with restricted range.
+  //! @param theC [in] 2d curve
+  //! @param theFirstParameter [in] first parameter on curve
+  //! @param theLastParameter  [in] last  parameter on curve
+  //! @param theAngularDeflection   [in] angular deflection in radians
+  //! @param theCurvatureDeflection [in] linear deflection
+  //! @param theMinimumOfPoints [in] minimum number of points
+  //! @param theUTol   [in] tolerance in curve parametric scope
+  //! @param theMinLen [in] minimal length
+  Standard_EXPORT void Initialize (const Adaptor2d_Curve2d& theC,
+                                   const Standard_Real theFirstParameter, const Standard_Real theLastParameter,
+                                   const Standard_Real theAngularDeflection, const Standard_Real theCurvatureDeflection,
+                                   const Standard_Integer theMinimumOfPoints = 2,
+                                   const Standard_Real theUTol = 1.0e-9,
+                                   const Standard_Real theMinLen = 1.0e-7);
+
   //! Add point to already calculated points (or replace existing)
   //! Returns index of new added point
   //! or founded with parametric tolerance (replaced if theIsReplace is true)
-  Standard_EXPORT Standard_Integer AddPoint (const gp_Pnt& thePnt, const Standard_Real theParam, const Standard_Boolean theIsReplace = Standard_True);
-  
+  Standard_EXPORT Standard_Integer AddPoint (const gp_Pnt& thePnt,
+                                             const Standard_Real theParam,
+                                             const Standard_Boolean theIsReplace = Standard_True);
+
   Standard_Integer NbPoints () const
   {
-    return parameters.Length ();
+    return myParameters.Length ();
   }
-  
+
   Standard_Real Parameter (const Standard_Integer I) const
   {
-    return parameters.Value (I);
+    return myParameters.Value (I);
   }
-  
+
   gp_Pnt Value (const Standard_Integer I) const
   {
-    return points.Value (I);
+    return myPoints.Value (I);
   }
-  
+
   //! Computes angular step for the arc using the given parameters.
-  Standard_EXPORT static Standard_Real ArcAngularStep (const Standard_Real theRadius, const Standard_Real theLinearDeflection, const Standard_Real theAngularDeflection, const Standard_Real theMinLength);
+  Standard_EXPORT static Standard_Real ArcAngularStep (const Standard_Real theRadius,
+                                                       const Standard_Real theLinearDeflection,
+                                                       const Standard_Real theAngularDeflection,
+                                                       const Standard_Real theMinLength);
 
 private:
-  
-  Standard_EXPORT void PerformLinear (const Adaptor3d_Curve& C);
-  
-  Standard_EXPORT void PerformLinear (const Adaptor2d_Curve2d& C);
-  
-  Standard_EXPORT void PerformCircular (const Adaptor3d_Curve& C);
-  
-  Standard_EXPORT void PerformCircular (const Adaptor2d_Curve2d& C);
-  
-  Standard_EXPORT void PerformCurve (const Adaptor3d_Curve& C);
-  
-  Standard_EXPORT void PerformCurve (const Adaptor2d_Curve2d& C);
-  
-  Standard_EXPORT void EvaluateDu (const Adaptor3d_Curve& C, const Standard_Real U, gp_Pnt& P, Standard_Real& Du, Standard_Boolean& NotDone) const;
-  
-  Standard_EXPORT void EvaluateDu (const Adaptor2d_Curve2d& C, const Standard_Real U, gp_Pnt& P, Standard_Real& Du, Standard_Boolean& NotDone) const;
 
-  Standard_EXPORT void EstimDefl (const Adaptor3d_Curve& C, const Standard_Real U1, const Standard_Real U2, 
-                                  Standard_Real& MaxDefl, Standard_Real& UMax);
-  
-  Standard_EXPORT void EstimDefl (const Adaptor2d_Curve2d& C, const Standard_Real U1, const Standard_Real U2, 
-                                  Standard_Real& MaxDefl, Standard_Real& UMax);
+  template<class TheCurve>
+  void initialize (const TheCurve& theC,
+                   const Standard_Real theFirstParameter, const Standard_Real theLastParameter,
+                   const Standard_Real theAngularDeflection, const Standard_Real theCurvatureDeflection,
+                   const Standard_Integer theMinimumOfPoints,
+                   const Standard_Real theUTol,
+                   const Standard_Real theMinLen);
+
+  template<class TheCurve>
+  void PerformLinear (const TheCurve& theC);
+
+  template<class TheCurve>
+  void PerformCircular (const TheCurve& theC);
+
+  //! Respecting the angle and the deflection,
+  //! we impose a minimum number of points on a curve.
+  template<class TheCurve>
+  void PerformCurve (const TheCurve& theC);
+
+  template<class TheCurve>
+  void EvaluateDu (const TheCurve& theC,
+                   const Standard_Real theU,
+                   gp_Pnt& theP,
+                   Standard_Real& theDu,
+                   Standard_Boolean& theNotDone) const;
+
+  //! Estimation of maximal deflection for interval [theU1, theU2]
+  template<class TheCurve>
+  void EstimDefl (const TheCurve& theC,
+                  const Standard_Real theU1, const Standard_Real theU2,
+                  Standard_Real& theMaxDefl, Standard_Real& theUMax);
 
 private:
-  Standard_Real angularDeflection;
-  Standard_Real curvatureDeflection;
-  Standard_Real uTol;
-  Standard_Integer minNbPnts;
+  Standard_Real myAngularDeflection;
+  Standard_Real myCurvatureDeflection;
+  Standard_Real myUTol;
+  Standard_Integer myMinNbPnts;
   Standard_Real myMinLen;
-  Standard_Real lastu;
-  Standard_Real firstu;
-  TColgp_SequenceOfPnt points;
-  TColStd_SequenceOfReal parameters;
+  Standard_Real myLastU;
+  Standard_Real myFirstu;
+  TColgp_SequenceOfPnt   myPoints;
+  TColStd_SequenceOfReal myParameters;
 };
 
 #endif // _GCPnts_TangentialDeflection_HeaderFile
